...
      <Tab.Screen
        component={AvailableOrdersScreen}
        name="AvailableOrders"
        options={{
          title: "Início",
          tabBarAccessibilityLabel: "Aba início do motoboy",
          tabBarButtonTestID: "courier-tab-home"
        }}
      />
      <Tab.Screen
        component={CompaniesScreen}
        name="Companies"
        options={{
...
